# asiochan

./: .clang-format  CMakeLists.txt  README.md  conanfile.py
.github/profiles/: debug_boost  debug_standalone
.github/workflows/: build.yml
examples/: CMakeLists.txt  example_sum.cpp  playground.cpp
include/asiochan/: asio.hpp  asiochan.hpp  async_promise.hpp  awaitable_promise.hpp  channel.hpp  channel_buff_size.hpp  channel_concepts.hpp  channel_ops.hpp  coro_promise.hpp  nothing_op.hpp  read_op.hpp  select.hpp  select_concepts.hpp  select_result.hpp  sendable.hpp  synchronized_awaitable_promise.hpp  write_op.hpp
include/asiochan/detail/: channel_buffer.hpp  channel_method_ops.hpp  channel_op_result_base.hpp  channel_shared_state.hpp  channel_waiter_list.hpp  overloaded.hpp  select_impl.hpp  send_slot.hpp  type_traits.hpp
tests/: CMakeLists.txt
tests/asiochan/: CMakeLists.txt  test_asiochan.cpp  test_channel.cpp
